Checking and fixing the errors

--- a/app/src/debug/res/xml/file_paths.xml
+++ b/app/src/debug/res/xml/file_paths.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Universidad Israel
 Proy. de Desarrollo de Aplica. Móviles
 Docente: Ing. Renato Toasa
