--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,6 +13,7 @@
         android:id="@+id/imageView"
         android:layout_width="300dp"
         android:layout_height="250dp"
+        android:contentDescription="@string/logo"
         android:src="@drawable/animalkingdom" />
 
     <TextView
