--- a/app/src/main/res/layout/row_recycler_evaluation_list.xml
+++ b/app/src/main/res/layout/row_recycler_evaluation_list.xml
@@ -31,6 +31,7 @@
                         android:id="@+id/imgListPerroEvaluacion"
                         android:layout_width="match_parent"
                         android:layout_height="96dp"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         card_view:civ_border_color="@color/colorPrimaryDark"
@@ -47,8 +48,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -58,8 +61,9 @@
                         android:id="@+id/lstSexoListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstTipo"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -68,8 +72,9 @@
                         android:id="@+id/lstObservacionesListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstSexo"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -78,8 +83,9 @@
                         android:id="@+id/lstFracturasListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstEdad"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -88,8 +94,9 @@
                         android:id="@+id/lstTiempoListEvaluacion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstTamano"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -99,8 +106,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -116,7 +125,9 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="1px"
+            android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:background="@color/colorPrimaryDark" />
     </androidx.cardview.widget.CardView>
