--- a/app/src/main/res/layout/activity_politics.xml
+++ b/app/src/main/res/layout/activity_politics.xml
@@ -11,8 +11,10 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
+        android:paddingStart="5dp"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
+        android:paddingEnd="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp">
 
@@ -21,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:text="@string/legislacion"
             android:textAlignment="center"
@@ -33,14 +36,11 @@
             android:id="@+id/imgPoliticasAdopcion"
             android:layout_width="wrap_content"
             android:layout_height="212dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
             android:contentDescription="@string/desc"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             app:srcCompat="@drawable/empatia" />
 
         <TextView
@@ -59,7 +59,8 @@
             android:justificationMode="inter_word"
             android:text="@string/codigoParrafo"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:autoSizeTextType="uniform" />
 
         <TextView
             android:id="@+id/lblItemParrafo"
@@ -203,6 +204,7 @@
                 android:layout_height="match_parent"
                 android:drawablePadding="8dp"
                 android:onClick="onClick"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/continuar"
                 android:textSize="16sp"
@@ -214,6 +216,7 @@
                 android:layout_height="wrap_content"
                 android:drawablePadding="8dp"
                 android:onClick="onClick"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/cancelar"
                 android:textSize="16sp"
