--- a/app/src/main/res/layout/activity_update_delete_adopted.xml
+++ b/app/src/main/res/layout/activity_update_delete_adopted.xml
@@ -58,10 +58,10 @@
                         android:orientation="vertical">
 
                         <ImageView
+
                             android:id="@+id/imgListPerroAdoptado"
                             android:layout_width="155dp"
                             android:layout_height="144dp"
-                            android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
                             android:layout_centerInParent="true"
                             android:layout_marginStart="5dp"
@@ -84,13 +84,15 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:checked="false"
-                            android:text="Estado" />
+                            android:text="@string/estado" />
 
                         <TextView
                             android:id="@+id/lstNombreAdoptante"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
                             android:layout_marginLeft="5dp"
+                            android:layout_toEndOf="@+id/imgListPerroAdoptado"
                             android:layout_toRightOf="@+id/imgListPerroAdoptado"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -99,7 +101,9 @@
                             android:id="@+id/lstCedulaAdoptante"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
                             android:layout_marginLeft="5dp"
+                            android:layout_toEndOf="@+id/imgListPerroAdoptado"
                             android:layout_toRightOf="@+id/imgListPerroAdoptado"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -108,8 +112,8 @@
                             android:id="@+id/lstEdadAdoptante"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
                             android:layout_marginLeft="5dp"
-                            android:layout_toRightOf="@+id/imgListPerroAdoptado"
                             android:textSize="13sp"
                             android:textStyle="bold" />
 
@@ -118,7 +122,9 @@
                             android:id="@+id/lstDireccionAdoptante"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
                             android:layout_marginLeft="5dp"
+                            android:layout_toEndOf="@+id/imgListPerroAdoptado"
                             android:layout_toRightOf="@+id/imgListPerroAdoptado"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -127,7 +133,9 @@
                             android:id="@+id/lstEstado"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
                             android:layout_marginLeft="5dp"
+                            android:layout_toEndOf="@+id/imgListPerroAdoptado"
                             android:layout_toRightOf="@+id/imgListPerroAdoptado"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -144,15 +152,12 @@
             android:id="@+id/simpleProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/progress_bar"
-            android:layout_alignLeft="@+id/progress_bar"
             tools:visibility="gone" />
 
         <LinearLayout
@@ -163,12 +168,14 @@
 
             <Button
                 android:id="@+id/btnActualizarAdoptado"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/actualizar" />
 
             <Button
                 android:id="@+id/btnEliminarAdoptado"
+
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/borrar" />
