--- a/app/src/main/res/layout/row_recycler_to_adopt.xml
+++ b/app/src/main/res/layout/row_recycler_to_adopt.xml
@@ -13,6 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
@@ -27,6 +28,7 @@
                     android:id="@+id/imgListPerroAdoptar"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     app:civ_border_color="@color/colorPrimaryDark"
@@ -43,8 +45,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -54,7 +58,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -63,8 +69,9 @@
                         android:id="@+id/lstTelefono"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstCedula"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -73,8 +80,9 @@
                         android:id="@+id/lstDireccion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstTelefono"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -83,8 +91,10 @@
                         android:id="@+id/lstSolicitud"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstDireccion"
+
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -99,7 +109,9 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="1px"
+            android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:background="@color/colorPrimaryDark" />
     </androidx.cardview.widget.CardView>
