--- a/app/src/main/res/layout/row_recycler_to_adopted_list.xml
+++ b/app/src/main/res/layout/row_recycler_to_adopted_list.xml
@@ -13,6 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
@@ -28,6 +29,7 @@
                     android:id="@+id/imgListPerroAdoptado"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     app:civ_border_color="@color/colorPrimaryDark"
@@ -44,9 +46,10 @@
                         android:id="@+id/lstNombreAdoptante"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -56,7 +59,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/lstNombreAdoptante"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -65,8 +70,9 @@
                         android:id="@+id/lstCedulaAdoptante"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstEdadAdoptante"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -75,8 +81,9 @@
                         android:id="@+id/lstDireccionAdoptante"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstCedulaAdoptante"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/imgListPerroEvaluacion"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -85,10 +92,10 @@
                         android:id="@+id/lstEstado"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/lstDireccionAdoptante"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:gravity="center_vertical|center"
-                        android:hint="Estado"
+                        android:hint="@string/estado"
                         android:textAlignment="center"
                         android:textSize="13sp"
                         android:textStyle="bold" />
@@ -102,7 +109,9 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="1px"
+            android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:background="@color/colorPrimaryDark" />
     </androidx.cardview.widget.CardView>
